feat: добавлено создание и получение списка желаний и документация для сваггера && добавлен компонент для создания нового списка;
